[package]
name = "dev_dashboard"
version = "0.1.1-beta.3"
edition = "2021"
authors = ["Your Name"]
description = "A system monitoring dashboard for developers"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/dev_dashboard"

[dependencies]
eframe = "0.24.1"
egui = "0.26.2"
sysinfo = "0.29.10"
glob = "0.3.1"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus"
]}
wmi = "0.13.1"
nvml-wrapper = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
simplelog = "0.12.1"
whoami = "1.4.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
winreg = "0.50"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "dev_dashboard.exe"
FileDescription = "Developer System Dashboard"
ProductName = "Dev Dashboard"
ProductVersion = "0.1.1"

# This is the correct way to specify the Windows subsystem
[package.metadata.cargo-winapp]
subsystem = "windows"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
